@@ -30,7 +30,7 @@ This is the world's first Java 21 course that teaches cutting-edge features thro
 - Recently viewed products using LRU cache with `SequencedSet`
 - Cart history tracking with `SequencedDeque`
 - REST API endpoints demonstrating real-world usage
-- 7 comprehensive test scenarios covering all business cases
+- 9 comprehensive test scenarios covering all business cases
 
 **Ready to Run:**
 ```bash
@@ -38,16 +38,22 @@ mvn test -Dtest="SequencedCollectionsLiveDemoTest"
 mvn spring-boot:run  # Access REST endpoints at localhost:8080
 ```
 
-### 🔄 **In Development: Record Patterns**
-**Target: Payment processing with pattern matching and guard conditions**
+### ✅ **Fully Implemented: Record Patterns**
+**Complete payment processing system with pattern matching and guard conditions**
 
-**Planned Features:**
-- Credit card, PayPal, and bank transfer processing
-- Fraud detection using pattern matching with guards
-- Order fulfillment system with business rules
-- Fee calculation engine
+**Features Working:**
+- Credit card, PayPal, and bank transfer processing with sealed interfaces
+- Pattern matching with complex guard conditions (`amount > 1000 && isInternational`)
+- Customer tier-based processing (Basic, Premium, VIP)
+- Fraud detection using pattern matching with business rules
+- Comprehensive test suite with 8 realistic business scenarios
+- Interactive web demo with real-time pattern matching visualization
 
-**Status:** Architecture designed, implementation pending
+**Ready to Run:**
+```bash
+mvn test -Dtest="RecordPatternsLiveDemoTest"
+# Web demo: http://localhost:8080/demos/payment-processing-demo.html
+```
 
 ### ⏳ **Pending: String Templates**
 **Target: Secure content generation and SQL injection prevention**
@@ -83,63 +89,9 @@ mvn spring-boot:run  # Access REST endpoints at localhost:8080
 
 ---
 
-## 📋 **Table of Contents**
+## ✨ **Java 21 Features Demonstrated**
 
-- [Implementation Status](#-implementation-status)
-- [Course Overview](#course-overview)
-- [Business Context: TechMart E-Commerce](#business-context)
-- [Java 21 Features Covered](#java-21-features-covered)
-- [Prerequisites & Setup](#prerequisites--setup)
-- [Current Demos](#current-demos)
-- [Running the Course](#running-the-course)
-- [Development Roadmap](#development-roadmap)
-- [Contributing](#contributing)
-
----
-
-## 🎯 **Course Overview**
-
-### **Target Audience**
-- Java developers upgrading from Java 8/11/17 to Java 21
-- Students learning modern Java development practices
-- Teams evaluating Java 21 adoption for production systems
-- Educators teaching practical Java programming
-
-### **Learning Outcomes**
-By completing this course, you will:
-- ✅ Master Java 21 features through production-ready business scenarios
-- ✅ Understand when and why to use each new feature
-- ✅ Build a complete e-commerce platform demonstrating real-world patterns
-- ✅ Apply Java 21 features to your own projects immediately
-- ✅ Write cleaner, more maintainable, and more secure code
-
-### **Course Philosophy**
-**Context-Driven Learning**: Every Java 21 feature is taught through realistic business problems, not abstract examples. You'll see exactly how these features solve the challenges you face in production code.
-
----
-
-## 🏪 **Business Context: TechMart E-Commerce**
-
-TechMart is our realistic e-commerce platform that demonstrates Java 21 features through practical business scenarios:
-
-### **Core Business Flows**
-1. **Shopping Cart Management** → ✅ **Implemented** (Sequenced Collections)
-2. **Payment Processing** → 🔄 **In Development** (Record Patterns with Guards)
-3. **Order Notifications** → ⏳ **Pending** (String Templates with Security)
-4. **User Authentication** → ⏳ **Pending** (Unnamed Patterns)
-5. **Admin Utilities** → ⏳ **Pending** (Unnamed Classes)
-
-### **Why E-Commerce?**
-- **Familiar Domain**: Every developer understands shopping carts and payments
-- **Complex Enough**: Real business rules and edge cases
-- **Production Patterns**: Actual patterns you'd use at work
-- **Scalable Examples**: From simple to enterprise-level complexity
-
----
-
-## ✨ **Java 21 Features Covered**
-
-### 🎯 **1. ✅ Sequenced Collections - Smart Shopping Cart (IMPLEMENTED)**
+### 🎯 **1. ✅ Sequenced Collections - Smart Shopping Cart**
 **Business Problem**: Shopping cart with undo/redo and recently viewed products
 
 **Traditional Approach**:
@@ -163,21 +115,15 @@ cart.addFirst(priorityItem);
 cart.removeLast(); // Undo last action
 ```
 
-**What's Built**:
-- ✅ Shopping cart with undo/redo functionality using `SequencedDeque`
-- ✅ Recently viewed products with automatic size management
-- ✅ LRU cache implementation for product recommendations
-- ✅ REST API endpoints with first/last metadata
-- ✅ Comprehensive test suite with 7 business scenarios
-
-**Run the Demo**:
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest"
-```
+**Business Value:**
+- ✅ VIP customers get priority item placement with `addFirst()`
+- ✅ Undo functionality using `removeLast()` - O(1) operation
+- ✅ Recently viewed products with automatic LRU management
+- ✅ Cart history with chronological ordering maintained
 
 ---
 
-### 🎯 **2. 🔄 Record Patterns - Smart Payment Processing (IN DEVELOPMENT)**
+### 🎯 **2. ✅ Record Patterns - Smart Payment Processing**
 **Business Problem**: Process different payment methods with complex business rules
 
 **Traditional Approach**:
@@ -186,443 +132,221 @@ if (payment instanceof CreditCard) {
     CreditCard cc = (CreditCard) payment;
     if (cc.isInternational() && cc.getAmount() > 1000) {
         // Handle international high-value transaction
+        // Lots of casting and manual checks
     }
 }
 ```
 
 **Java 21 Solution**:
 ```java
-switch (payment) {
-    case CreditCard(var id, var amount, var status, 
-                   var lastFour, var cardType, var isInternational) 
-        when isInternational && amount > 1000 -> {
-        // Clean pattern matching with guard conditions
-        processInternationalHighValue(payment);
+PaymentProcessingResult result = switch (paymentMethod) {
+    case CreditCard(var number, var type, var cvv, var month, var year, 
+                   var name, var isInternational, var createdAt)
+        when amount.compareTo(HIGH_VALUE_THRESHOLD) > 0 && isInternational -> {
+        
+        logger.info("High-value international transaction: {} {}", amount, type);
+        yield PaymentProcessingResult.requiresVerification(
+            paymentMethod, amount, "amount > $1000 && isInternational",
+            "CreditCard", "High-value international transaction requires verification"
+        );
     }
-    // More patterns...
-}
-```
-
-**What Will Be Built**:
-- 🔄 Intelligent payment router with fraud detection
-- 🔄 Order fulfillment system with business rules
-- 🔄 Fee calculation engine with pattern matching
-
-**Status**: Architecture designed, implementation next priority
-
----
-
-### 🎯 **3. ⏳ String Templates - Secure Content Generation (PENDING)**
-**Business Problem**: Generate emails, SMS, and SQL queries safely
-
-**Traditional Approach**:
-```java
-// Vulnerable to injection attacks
-String sql = "SELECT * FROM users WHERE name = '" + userName + "'";
-String email = "Hello " + customer.getName() + ", your order #" + order.getId();
-```
-
-**Java 21 Solution**:
-```java
-// Safe, readable templates with automatic validation
-var sql = SQL."SELECT * FROM users WHERE name = \{userName}";
-var email = STR."Hello \{customer.getName()}, your order #\{order.getId()}";
-```
-
-**What Will Be Built**:
-- ⏳ Secure SQL query builder preventing injection attacks
-- ⏳ Email template system with customer personalization
-- ⏳ SMS notification service with rate limiting
-- ⏳ HTML content generator with XSS protection
-
-**Status**: Design phase, requires preview features setup
-
----
-
-### 🎯 **4. ⏳ Unnamed Patterns & Variables - Clean Exception Handling (PENDING)**
-**Business Problem**: Handle exceptions without unused variable clutter
-
-**Traditional Approach**:
-```java
-try {
-    processPayment(payment);
-} catch (PaymentException e) {
-    // 'e' is unused but required
-    logPaymentFailure();
-}
-```
-
-**Java 21 Solution**:
-```java
-try {
-    processPayment(payment);
-} catch (PaymentException _) {
-    // Clean: intent is clear, no unused variables
-    logPaymentFailure();
-}
-```
-
-**What Will Be Built**:
-- ⏳ User authentication service with clean error handling
-- ⏳ Audit logging system focusing on business events
-- ⏳ Resource management with simplified patterns
-
-**Status**: Concept defined, implementation planned
-
----
-
-### 🎯 **5. ⏳ Unnamed Classes & Main Methods - Rapid Development (PENDING)**
-**Business Problem**: Quick admin utilities and data analysis scripts
-
-**Traditional Approach**:
-```java
-public class ProductAnalyzer {
-    public static void main(String[] args) {
-        // Boilerplate for simple scripts
+    
+    case PayPal(var email, var accountId, var isVerified, var saveForFuture, var createdAt)
+        when customer.isPremium() -> {
+        
+        logger.info("Premium customer PayPal: {} for {}", email, customer.tier());
+        yield PaymentProcessingResult.expedited(
+            paymentMethod, amount, "PayPal", customer.tier().toString(), discount
+        );
     }
-}
+    
+    case BankTransfer(var account, var routing, var bankName, 
+                     var accountType, var holderName, var createdAt)
+        when amount.compareTo(LARGE_TRANSFER_THRESHOLD) >= 0 -> {
+        
+        logger.info("Large bank transfer requires approval: {} from {}", amount, bankName);
+        yield PaymentProcessingResult.requiresApproval(
+            paymentMethod, amount, "amount >= $5000", "BankTransfer",
+            "Large bank transfer requires manager approval"
+        );
+    }
+    
+    // More patterns... No default case needed - compiler enforces exhaustiveness!
+};
 ```
 
-**Java 21 Solution**:
-```java
-// Direct execution without class boilerplate
-void main() {
-    var products = loadProducts();
-    var analysis = analyzeInventory(products);
-    generateReport(analysis);
-}
-```
-
-**What Will Be Built**:
-- ⏳ Product inventory analyzer
-- ⏳ Sales report generator
-- ⏳ Customer data processor
-- ⏳ Admin utilities for live demonstrations
-
-**Status**: Use cases identified, implementation planned
+**Business Value:**
+- ✅ Type-safe payment method handling with sealed interfaces
+- ✅ Complex business rules expressed clearly with guard conditions
+- ✅ Automatic fraud detection based on amount + geography
+- ✅ Customer tier-based processing (Premium gets expedited PayPal)
+- ✅ No runtime ClassCastException - compiler verified
+- ✅ Exhaustive pattern matching - can't forget a payment method
 
 ---
 
-## 📋 **Prerequisites & Setup**
+## 🏃‍♂️ **Quick Start Guide**
 
-### **Required Software**
-- **Java 21 or higher** (with preview features enabled)
-- **Maven 3.6+**
-- **IDE with Java 21 support**:
-    - IntelliJ IDEA 2023.2+
-    - Eclipse 2023-09+
-    - VS Code with Java extensions
-
-### **Quick Setup**
+### **1. Prerequisites**
 ```bash
-# 1. Clone the repository
+# Verify Java 21+ installation
+java --version  # Should show Java 21 or higher
+
+# Clone the repository
 git clone https://github.com/your-org/techmart-java21-features-showcase.git
 cd techmart-java21-features-showcase
-
-# 2. Verify Java 21
-java --version
-
-# 3. Build the project
-mvn clean compile
-
-# 4. Run implemented demos
-mvn test -Dtest="SequencedCollectionsLiveDemoTest"
-
-# 5. Start Spring Boot app (optional)
-mvn spring-boot:run
 ```
 
-### **IDE Configuration**
+### **2. Run the Complete Demo Platform**
+```bash
+# Start the Spring Boot application
+mvn spring-boot:run
 
-#### **IntelliJ IDEA**
-1. File → Project Structure → Project Settings → Project
-2. Set Project SDK to Java 21
-3. Set Language Level to "21 (Preview - Pattern matching for switch, etc.)"
-4. Build → Compiler → Java Compiler → Add `--enable-preview` to compiler arguments
+# Open your browser to:
+# http://localhost:8080/demos/index.html
+```
 
-#### **VS Code**
-1. Install "Extension Pack for Java"
-2. Open Command Palette → "Java: Configure Java Runtime"
-3. Set Java 21 as default
-4. Add `--enable-preview` to launch configurations
+### **3. Run Individual Feature Tests**
+```bash
+# Shopping Cart Demo (Sequenced Collections)
+mvn test -Dtest="SequencedCollectionsLiveDemoTest"
+
+# Payment Processing Demo (Record Patterns)
+mvn test -Dtest="RecordPatternsLiveDemoTest"
+
+# All demos
+mvn test
+```
+
+### **4. Interactive Web Demos**
+- 🛒 **Shopping Cart**: http://localhost:8080/demos/shopping-cart-demo.html
+- 💳 **Payment Processing**: http://localhost:8080/demos/payment-processing-demo.html
+- 📝 **String Templates**: http://localhost:8080/demos/string-templates-demo.html *(Coming Soon)*
 
 ---
 
-## 🏗️ **Current Project Architecture**
+## 📊 **Test Results & Educational Value**
 
-### **Implemented Structure**
+### **Sequenced Collections - 9 Scenarios Covered:**
+1. ✅ Basic cart operations with insertion order
+2. ✅ VIP priority item placement using `addFirst()`
+3. ✅ Undo functionality with `removeLast()`
+4. ✅ Recently viewed LRU cache with `SequencedSet`
+5. ✅ Cart history tracking with chronological order
+6. ✅ Reversed collections view with `reversed()`
+7. ✅ Complete e-commerce flow integration
+8. ✅ Specific item removal while maintaining order
+9. ✅ Edge cases and error handling
+
+### **Record Patterns - 8 Business Scenarios:**
+1. ✅ Credit card pattern matching with guard conditions
+2. ✅ PayPal processing with customer tier guards
+3. ✅ Bank transfer with amount-based approval routing
+4. ✅ Exhaustive pattern matching across all payment types
+5. ✅ Processing statistics and analytics integration
+6. ✅ Complex multi-attempt payment scenarios
+7. ✅ Record pattern deconstruction examples
+8. ✅ Performance testing with 1000+ transactions
+
+---
+
+## 🎓 **Learning Outcomes**
+
+After completing this showcase, you will:
+
+### **Technical Mastery:**
+- ✅ Understand when to use `getFirst()` vs `iterator().next()`
+- ✅ Apply `addFirst()`/`addLast()` for strategic business positioning
+- ✅ Implement pattern matching with complex guard conditions
+- ✅ Design sealed interface hierarchies for type safety
+- ✅ Build production-ready Java 21 applications
+
+### **Business Application:**
+- ✅ Solve real e-commerce cart management problems
+- ✅ Implement sophisticated payment processing logic
+- ✅ Apply modern Java patterns to existing codebases
+- ✅ Design APIs that leverage Java 21 features naturally
+
+### **Architecture Skills:**
+- ✅ Structure applications using modern Java patterns
+- ✅ Design type-safe domain models with records and sealed interfaces
+- ✅ Implement clean service layers with pattern matching
+- ✅ Build testable business logic with realistic scenarios
+
+---
+
+## 🏗️ **Project Architecture**
+
 ```
 src/main/java/com/example/techmart/
-├── TechMartApplication.java               # Spring Boot main class
+├── TechMartApplication.java                    # Spring Boot main class
 ├── features/
-│   └── sequencedcollections/              # ✅ FULLY IMPLEMENTED
-│       ├── controller/CartController.java # REST endpoints
+│   ├── sequencedcollections/                   # ✅ FULLY IMPLEMENTED
+│   │   ├── controller/CartController.java     # REST endpoints
+│   │   ├── domain/
+│   │   │   ├── CartItem.java                 # Cart item record
+│   │   │   └── CartSnapshot.java             # History tracking
+│   │   └── service/
+│   │       ├── ShoppingCartService.java      # Cart operations
+│   │       ├── RecentlyViewedService.java    # LRU cache
+│   │       └── CartHistoryService.java       # History management
+│   └── recordpatterns/                         # ✅ FULLY IMPLEMENTED
+│       ├── controller/PaymentProcessingController.java
 │       ├── domain/
-│       │   ├── CartItem.java             # Cart item record
-│       │   └── CartSnapshot.java         # History tracking
+│       │   ├── PaymentMethod.java            # Sealed interface
+│       │   ├── CreditCard.java               # Payment record
+│       │   ├── PayPal.java                   # Payment record
+│       │   ├── BankTransfer.java             # Payment record
+│       │   └── PaymentProcessingResult.java  # Result record
 │       └── service/
-│           ├── ShoppingCartService.java  # Cart operations
-│           ├── RecentlyViewedService.java # LRU cache
-│           └── CartHistoryService.java   # History management
+│           └── PaymentProcessingService.java  # Pattern matching logic
 └── shared/
-    ├── domain/                           # Common domain models
+    ├── domain/                                 # Common domain models
     │   ├── Customer.java
     │   ├── Product.java
     │   └── Money.java
-    └── exception/                        # Custom exceptions
+    └── exception/                              # Custom exceptions
         └── TechMartException.java
 
 src/test/java/
-└── features/
-    └── sequencedcollections/
-        └── SequencedCollectionsLiveDemoTest.java  # ✅ 7 working demos
-```
+├── SequencedCollectionsLiveDemoTest.java      # ✅ 9 working demos
+└── RecordPatternsLiveDemoTest.java             # ✅ 8 working demos
 
-### **Planned Structure for Remaining Features**
-```
-src/main/java/com/example/techmart/features/
-├── recordpatterns/                       # 🔄 IN DEVELOPMENT
-│   ├── PaymentProcessingDemo.java
-│   ├── domain/
-│   │   └── Payment.java                 # Sealed interface
-│   └── service/
-│       └── PaymentService.java
-├── stringtemplates/                     # ⏳ PENDING
-│   ├── SecureTemplatingDemo.java
-│   └── service/
-│       └── NotificationService.java
-├── unnamedpatterns/                     # ⏳ PENDING
-│   └── ExceptionHandlingDemo.java
-└── unnamedclasses/                      # ⏳ PENDING
-    ├── ProductAnalyzer.java
-    └── AdminUtilities.java
+src/main/resources/static/
+├── demos/
+│   ├── index.html                              # Main demo hub
+│   ├── shopping-cart-demo.html                 # Interactive cart demo
+│   └── payment-processing-demo.html            # Interactive payment demo
+├── css/                                        # Professional styling
+└── js/                                         # Interactive demo logic
 ```
 
 ---
 
-## 🎪 **Current Demos Available**
+## 🎯 **Why This Approach Works**
 
-### **✅ Sequenced Collections Demos (All Working)**
+### **1. Context-Driven Learning**
+Every Java 21 feature is taught through realistic business problems, not abstract examples. You see exactly how these features solve challenges you face in production code.
 
-**Demo 1: Basic Shopping Cart Operations**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateBasicCartOperations"
-```
+### **2. Production-Ready Patterns**
+All code follows enterprise development practices:
+- Comprehensive error handling and validation
+- Proper service layer separation
+- RESTful API design
+- Extensive test coverage
+- Professional logging and monitoring
 
-**Demo 2: VIP Priority Item Placement**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstratePriorityItemPlacement"
-```
+### **3. Interactive Experience**
+Web-based demos let you see Java 21 features in action:
+- Real-time pattern matching visualization
+- Visual API flow inspector
+- Interactive business scenario testing
 
-**Demo 3: Cart Undo Functionality**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateUndoFunctionality"
-```
-
-**Demo 4: Recently Viewed LRU Cache**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateRecentlyViewedLruCache"
-```
-
-**Demo 5: Cart History Tracking**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateCartHistoryTracking"
-```
-
-**Demo 6: Reversed Collections View**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateReversedCollectionsView"
-```
-
-**Demo 7: Complete E-commerce Flow**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateCompleteShoppingFlow"
-```
-
-**Run All Demos:**
-```bash
-mvn test -Dtest="SequencedCollectionsLiveDemoTest"
-```
-
-### **🔄 Coming Soon: Record Patterns Demos**
-- Payment processing with different payment types
-- Fraud detection using pattern guards
-- Order fulfillment with business rules
-
-### **⏳ Planned: Additional Feature Demos**
-- String Templates: Secure email and SQL generation
-- Unnamed Patterns: Clean exception handling
-- Unnamed Classes: Admin utility scripts
-
----
-
-## 🏃‍♂️ **Running the Course**
-
-### **Current Available Commands**
-
-**Individual Sequenced Collections Tests:**
-```bash
-# All implemented demos
-mvn test -Dtest="SequencedCollectionsLiveDemoTest"
-
-# Specific business scenarios
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateBasicCartOperations"
-mvn test -Dtest="SequencedCollectionsLiveDemoTest#demonstrateUndoFunctionality"
-```
-
-**Spring Boot Integration:**
-```bash
-# Start the application
-mvn spring-boot:run
-
-# Test REST endpoints
-curl http://localhost:8080/api/cart/1
-curl -X POST http://localhost:8080/api/cart/1/items \
-  -H "Content-Type: application/json" \
-  -d '{"productId":1,"productName":"iPhone","quantity":1,"price":999.99}'
-```
-
-**Build and Test Everything:**
-```bash
-mvn clean install
-```
-
----
-
-## 🛣️ **Development Roadmap**
-
-### **Phase 1: ✅ Foundation (COMPLETED)**
-- [x] Project setup with Java 21 and Spring Boot
-- [x] Sequenced Collections implementation
-- [x] Comprehensive test suite
-- [x] REST API integration
-- [x] Documentation and README
-
-### **Phase 2: 🔄 Record Patterns (IN PROGRESS)**
-- [ ] Payment domain model with sealed interfaces
-- [ ] Pattern matching for payment processing
-- [ ] Guard conditions for business rules
-- [ ] Fraud detection patterns
-- [ ] Integration tests
-
-**Estimated Completion**: Next 1-2 weeks
-
-### **Phase 3: ⏳ String Templates (PLANNED)**
-- [ ] Email template system
-- [ ] SQL injection prevention
-- [ ] Custom template processors
-- [ ] Security validation
-
-**Estimated Start**: After Record Patterns completion
-
-### **Phase 4: ⏳ Unnamed Features (PLANNED)**
-- [ ] Unnamed patterns for exception handling
-- [ ] Unnamed classes for utility scripts
-- [ ] Admin tool demonstrations
-
-**Estimated Timeline**: 2-3 weeks after String Templates
-
-### **Phase 5: ⏳ Integration & Polish (PLANNED)**
-- [ ] Cross-feature integration demos
-- [ ] Performance benchmarks
-- [ ] Migration guides
-- [ ] Video tutorials
-
----
-
-## 🧪 **Testing Strategy**
-
-### **Current Test Coverage**
-- ✅ **Sequenced Collections**: 7 comprehensive test scenarios
-- ✅ **Spring Boot Integration**: REST API endpoint tests
-- ✅ **Domain Models**: Unit tests for shared components
-
-### **Test Commands**
-```bash
-# Run all implemented tests
-mvn test
-
-# Run only sequenced collections tests
-mvn test -Dtest="*SequencedCollections*"
-
-# Run with detailed output
-mvn test -Dtest="SequencedCollectionsLiveDemoTest" -Dspring.profiles.active=demo
-```
-
-### **Planned Test Expansion**
-- 🔄 Record Patterns: Payment processing test scenarios
-- ⏳ String Templates: Security validation tests
-- ⏳ Integration: Cross-feature workflow tests
-
----
-
-## 🚀 **What's Already Built**
-
-### **✅ Core E-Commerce Features (Sequenced Collections)**
-- ✅ **Shopping Cart System** with undo/redo using sequenced collections
-- ✅ **Recently Viewed Products** with LRU cache implementation
-- ✅ **Cart History Tracking** with chronological state management
-- ✅ **VIP Priority Placement** for premium customers
-- ✅ **REST API Integration** with Spring Boot
-
-### **✅ Production-Ready Patterns**
-- ✅ **Performance**: Efficient collections usage with O(1) access
-- ✅ **Maintainability**: Clean service separation and proper abstractions
-- ✅ **Scalability**: Memory-based storage with configurable limits
-- ✅ **Observability**: Comprehensive logging and error handling
-
-### **✅ Modern Development Practices**
-- ✅ **Spring Boot Integration**: RESTful APIs with Java 21 features
-- ✅ **Test-Driven Development**: 7 comprehensive test scenarios
-- ✅ **Clean Architecture**: Feature-based organization
-- ✅ **Documentation**: Self-documenting code with business context
-
----
-
-## 🎯 **Current Learning Outcomes**
-
-### **Technical Skills (Sequenced Collections)**
-- ✅ Master Java 21 Sequenced Collections through shopping cart implementation
-- ✅ Understand when to use `getFirst()`/`getLast()` for efficient access
-- ✅ Apply `addFirst()`/`addLast()` for strategic item placement
-- ✅ Implement undo functionality with `removeFirst()`/`removeLast()`
-- ✅ Use `reversed()` for alternative ordering without collection copying
-
-### **Practical Skills**
-- ✅ Solve real e-commerce problems using modern Java patterns
-- ✅ Implement LRU cache using `SequencedSet`
-- ✅ Build state management systems with `SequencedDeque`
-- ✅ Create REST APIs showcasing Java 21 features
-
-### **Business Value Demonstrated**
-- ✅ Shopping cart with intuitive undo/redo operations
-- ✅ Recently viewed products for improved user experience
-- ✅ VIP customer priority handling
-- ✅ Audit trail with chronological order history
-
----
-
-## ⚠️ **Important Notes**
-
-### **Preview Features**
-Current implementation uses stable Java 21 features:
-- ✅ **Sequenced Collections**: Standard feature, production ready
-
-Upcoming implementations will use preview features:
-- 🔄 **Record Patterns**: Preview feature, requires `--enable-preview`
-- ⏳ **String Templates**: Preview feature, may change in future versions
-
-```bash
-# Enable preview features for future demos
-java --enable-preview MyClass.java
-mvn compile -Dcompile.previewFeatures=true
-```
-
-### **IDE Support**
-Ensure your IDE supports Java 21:
-- IntelliJ IDEA 2023.2+: ✅ Full support for implemented features
-- Eclipse 2023-09+: ✅ Good support
-- VS Code: ✅ With Java extensions
+### **4. Immediate Applicability**
+Focus on patterns you can use immediately:
+- Refactor existing collections to use Sequenced Collections
+- Replace instanceof chains with pattern matching
+- Implement type-safe domain models with sealed interfaces
 
 ---
 
@@ -631,47 +355,25 @@ Ensure your IDE supports Java 21:
 We welcome contributions to complete the remaining Java 21 features!
 
 ### **Current Priorities**
-1. **Record Patterns Implementation**: Payment processing with pattern matching
-2. **String Templates**: Secure content generation
+1. **String Templates**: Secure email and SQL generation
+2. **Unnamed Patterns**: Clean exception handling patterns
 3. **Documentation**: Improve examples and explanations
 4. **Test Coverage**: Add scenarios for new features
 
 ### **How to Contribute**
-1. **Choose a Feature**: Pick from Record Patterns, String Templates, or Unnamed features
-2. **Follow the Pattern**: Use the Sequenced Collections implementation as a reference
-3. **Business Context**: All examples must solve realistic e-commerce problems
-4. **Comprehensive Testing**: Include demo tests showing practical usage
-
-### **Getting Started**
-```bash
-# Fork the repository
-git clone https://github.com/your-username/techmart-java21-features-showcase.git
-
-# Create a feature branch
-git checkout -b feature/record-patterns-implementation
-
-# Follow the established project structure
-# See src/main/java/com/example/techmart/features/sequencedcollections/ as reference
-
-# Test your implementation
-mvn clean test
-
-# Submit a pull request
-```
+1. Choose a feature from the roadmap
+2. Follow the established project structure
+3. Ensure all examples solve realistic e-commerce problems
+4. Include comprehensive demo tests
+5. Add interactive web demo components
 
 ---
 
 ## 📞 **Support & Community**
 
-### **Getting Help**
 - 🐛 **Issues**: Report bugs or request features via GitHub Issues
 - 💬 **Discussions**: Ask questions about Java 21 features
 - 📧 **Contact**: Reach out for enterprise training inquiries
-
-### **Current Status Updates**
-- ✅ **Sequenced Collections**: Fully implemented and tested
-- 🔄 **Record Patterns**: Architecture designed, implementation in progress
-- ⏳ **Remaining Features**: Design phase, contributions welcome
 
 ---
 
@@ -681,18 +383,13 @@ This project is licensed under the MIT License - see the [LICENSE](LICENSE) file
 
 ---
 
-## 🎓 **About This Course**
+## 🎉 **Ready to Start?**
 
-This revolutionary approach to teaching Java 21 was designed to bridge the gap between academic examples and production reality. Instead of learning features in isolation through toy examples, you experience how Java 21 solves real business problems in a complete application context.
+```bash
+git clone https://github.com/your-org/techmart-java21-features-showcase.git
+cd techmart-java21-features-showcase
+mvn spring-boot:run
+# Open http://localhost:8080/demos/index.html
+```
 
-**Current Status**: The foundation is solid with Sequenced Collections fully implemented. The remaining features are being developed following the same practical, business-focused approach.
-
-**The result?** You don't just learn Java 21 syntax - you master when, why, and how to apply these features in your daily work.
-
----
-
-**Ready to explore Java 21 Sequenced Collections? Start with the [implemented demos](#-current-demos-available) and see the features in action!**
-
----
-
-*This course is part of the "Modern Java Development" series. The current implementation focuses on Sequenced Collections, with Record Patterns, String Templates, and Unnamed features coming soon.*
+**Transform your Java development with modern language features through realistic business scenarios!**
